--- a/api/slot/models/slot.settings.json
+++ b/api/slot/models/slot.settings.json
@@ -2,7 +2,8 @@
   "kind": "collectionType",
   "collectionName": "slots",
   "info": {
-    "name": "slot"
+    "name": "slot",
+    "description": ""
   },
   "options": {
     "increments": true,
@@ -24,6 +25,10 @@
       "plugin": "users-permissions",
       "model": "user",
       "via": "slots"
+    },
+    "payment": {
+      "via": "slot",
+      "model": "payment"
     }
   }
 }
