Installed pg, aws-S3 upload provider and updated the config files

--- a/api/lastsevendaysslot/models/lastsevendaysslot.settings.json
+++ b/api/lastsevendaysslot/models/lastsevendaysslot.settings.json
@@ -1,8 +1,8 @@
 {
   "kind": "collectionType",
-  "collectionName": "login_informations",
+  "collectionName": "lastsevendaysslots",
   "info": {
-    "name": "login information"
+    "name": "lastsevendaysslot"
   },
   "options": {
     "increments": true,
@@ -11,14 +11,14 @@
   },
   "pluginOptions": {},
   "attributes": {
-    "loggedAt": {
-      "type": "datetime"
-    },
     "username": {
       "type": "string"
     },
-    "requestedFor": {
-      "type": "string"
+    "date": {
+      "type": "date"
+    },
+    "time": {
+      "type": "time"
     }
   }
 }
